# mav_gtsam_estimator

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugin.xml  package.xml  setup.py
cfg/: estimator.yaml  estimator_glacier.yaml  imu_filter.yaml  rqt_multiplot.xml  rviz_config.rviz
include/mav_state_estimation/: absolute_position_factor.h  heading_factor.h  initialization.h  mav_state_estimator.h  moving_baseline_factor.h
install/: dependencies.rosinstall  dependencies_https.rosinstall  prepare-jenkins-slave.sh
launch/: mav_state_estimator.launch  mav_state_estimator_glacier.launch  mav_state_estimator_nodelet.launch
msg/: BatchStatus.msg  Timing.msg
nodes/: bag_to_csv
python/mav_state_estimation/: csv_export.py  filter_imu.py  plot.py
scripts/: compare.ipynb  export_csv  filter_imu  graphviz.ipynb  plot
src/: absolute_position_factor.cc  heading_factor.cc  initialization.cc  mav_state_estimator.cc  mav_state_estimator_node.cc  mav_state_estimator_nodelet.cc  moving_baseline_factor.cc
srv/: BagToCsv.srv  Batch.srv
test/: absolute_position_factor-test.cc  moving_baseline_factor-test.cc
