<?xml version="1.0"?>
<package format="2">
  <name>mav_state_estimation</name>
  <version>1.0.0</version>
  <description>
    A GTSAM based framework for MAV state estimation.
  </description>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam_catkin</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml" />
  </export>
</package>
